feat(teachingAffairs): part